--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "src"
   ],
   "scripts": {
-    "build": "node build/build.js"
+    "build": "node build/build.js && node-sass src/styles/main.scss dist/vuecanvasvideo.min.css --output-style compressed"
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "^1.0.2",
@@ -49,6 +49,7 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-postcss": "^0.2.0",
     "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-scss": "^0.3.0",
     "rollup-plugin-vue": "^2.2.20",
     "style-loader": "^0.13.1",
     "stylefmt": "^5.1.2",
@@ -59,7 +60,8 @@
     "vue": "^2.4.0",
     "vue-loader": "^11.1.0",
     "vue-template-compiler": "^2.1.10",
-    "webpack": "^3.2.0"
+    "webpack": "^3.2.0",
+    "node-sass": "^4.5.3"
   },
   "peerDependencies": {
     "vue": "^2.4.0"
@@ -77,6 +79,7 @@
     "url": "http://www.opensource.org/licenses/mit-license.php"
   },
   "dependencies": {
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "rangeslider-pure": "^0.4.1"
   }
 }
