--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "mkdirp": "^0.5.1",
+    "node-sass": "^4.5.3",
     "postcss": "^5.2.15",
     "postcss-cssnext": "^2.9.0",
     "rimraf": "^2.6.0",
@@ -56,12 +57,12 @@
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-processor-html": "^1.0.0",
+    "uglify-js": "^3.0.26",
     "uppercamelcase": "^1.1.0",
     "vue": "^2.4.0",
     "vue-loader": "^11.1.0",
     "vue-template-compiler": "^2.1.10",
-    "webpack": "^3.2.0",
-    "node-sass": "^4.5.3"
+    "webpack": "^3.2.0"
   },
   "peerDependencies": {
     "vue": "^2.4.0"
